--- a/ch03/managing-many-to-many-relationship/course-tracker-start/src/main/resources/application.properties
+++ b/ch03/managing-many-to-many-relationship/course-tracker-start/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.datasource.password=password
 #Enable H2 console
 spring.h2.console.enabled=true
 # Create the tables
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
