--- a/ch04/custom-failure-analyzer/course-tracker-custom-failure-analyzer-start/src/main/resources/application.properties
+++ b/ch04/custom-failure-analyzer/course-tracker-custom-failure-analyzer-start/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.password=password
 spring.h2.console.enabled=true
 # Disable the DDL generation
 spring.jpa.hibernate.ddl-auto=none
+
+# External API URL
+api.url=https://dog.ceo/dog-api/
