--- a/ch04/spring-boot-actuator/spring-boot-app-demo-start/src/main/resources/application.properties
+++ b/ch04/spring-boot-actuator/spring-boot-app-demo-start/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+# Initializes schema on each execution
+spring.datasource.initialization-mode=embedded
+# Database URL
+spring.datasource.url=jdbc:h2:mem:sbipdb
+# H2 Drive class
+spring.datasource.driverClassName=org.h2.Driver
+# Database Username
+spring.datasource.username=sa
+# Database Password
+spring.datasource.password=password
+#Enable H2 console
+spring.h2.console.enabled=true
+# Disable the DDL generation
+spring.jpa.hibernate.ddl-auto=none
 
+management.endpoints.web.exposure.inclue=*
+#management.server.port=8081
+#management.endpoints.web.base-path=/giorgiactuator/
+#management.endpoint.health.status.http-mapping.down=500
+
+management.endpoint.health.show-details=always
+spring.jackson.serialization.INDENT_OUTPUT=true
