add custom health endpoint

--- a/ch04/custom-endpoint/course-tracker-custom-endpoint-start/src/main/resources/application.properties
+++ b/ch04/custom-endpoint/course-tracker-custom-endpoint-start/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.datasource.password=password
 spring.h2.console.enabled=true
 # Disable the DDL generation
 spring.jpa.hibernate.ddl-auto=none
+
+management.endpoints.web.exposure.include=*
+management.endpoints.web.base-path=/gactuator
+management.endpoints.web.path-mapping.health=/detailedhealth
+management.endpoint.health.show-details=always
+management.server.port=8081
+spring.jackson.serialization.INDENT_OUTPUT=true
