add HTTPS TLS support:

--- a/ch06/implementing-https/course-tracker-start/src/main/resources/application.properties
+++ b/ch06/implementing-https/course-tracker-start/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.h2.console.enabled=true
 spring.mvc.hiddenmethod.filter.enabled=true
 # Disable the DDL generation
 spring.jpa.hibernate.ddl-auto=none
+
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore/sbip.p12
+server.ssl.key-store-password=Mariami15@
+server.ssl.key-password=Mariami15@
+server.ssl.key-alias=sbip
