add user registration to course application

--- a/ch06/user-registration/course-tracker-start/src/main/resources/application.properties
+++ b/ch06/user-registration/course-tracker-start/src/main/resources/application.properties
@@ -17,10 +17,15 @@ spring.jpa.hibernate.ddl-auto=none
 
 # The format used for the keystore. It could be set to JKS in case it is a JKS file
 server.ssl.key-store-type=PKCS12
+
+server.ssl.enabled=true
 # The path to the keystore containing the certificate
 server.ssl.key-store=classpath:keystore/sbip.p12
 # The password used to generate the certificate
-server.ssl.key-store-password=p@ssw0rd
+server.ssl.key-store-password=Mariami15@
+
+server.ssl.password=Mariami15@
+
 # The alias mapped to the certificate
 server.ssl.key-alias=sbip
 # HTTPS Port
